# korrekturleser

./: .env.development  .env.example  .env.production  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  README.md  TODO.md  biome.json  cspell-words.txt  cspell.config.yaml  cypress.config.ts  deployment.md  eslint.config.ts  index.html  knip.json  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml  sonar-project.properties  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: check.yml
.streamlit/: config-prod.toml  config.toml  secrets-EXAMPLE.toml
cypress/support/: commands.ts
fastapi_app/: __init__.py  gunicorn-conf.py  gunicorn_conf.py  helper_fastapi.py  korrekturleser-fastapi.ini  main.py  schemas.py
fastapi_app/routers/: auth.py  config.py  stats.py  text.py
nicegui_app/: __init__.py  config_nice.py  helper_nicegui.py  main.py  page_login.py  page_stats.py  page_text.py
scripts/: README.md  chk_js_dead.sh  chk_js_format.sh  chk_js_lint.sh  chk_js_package_audit.sh  chk_js_test.sh  chk_js_types.sh  chk_md_format.sh  chk_py_dead.sh  chk_py_format.sh  chk_py_package_audit.sh  chk_py_test.sh  chk_spelling.sh  cleanup.sh  config_convert.py  deploy.sh  fastapi.sh  gen_api_for_vue.sh  gen_mode_descriptions.py  gen_requirements.py  gen_secret.py  generate_mode_descriptions.py  install.sh  nicegui.sh  pytest.sh  ruff.sh  run_checks.sh  run_fastapi.sh  run_fastapi_and_vue.cmd  run_nicegui.cmd  run_pytest.sh  run_ruff.sh  run_vue.sh  streamlit.sh  update.sh
shared/: __init__.py  config.py  helper.py  helper_ai.py  helper_db.py  helper_diff.css  helper_diff.py  llm_provider.py  llm_provider_azure.py  llm_provider_gemini.py  llm_provider_mistral.py  llm_provider_ollama.py  llm_provider_openai.py  mode_configs.py  texts.py
src/: app.py  helper.py  helper_db.py  llm_provider.py
src/reports/: r01_verbessern.py  r09_raus.py  r89_logout.py  r99_session_stats.py  r99_stats.py
streamlit_app/: __init__.py  app.py  helper_streamlit.py  main.py  table_diff.css
streamlit_app/reports/: r01_text.py  r01_verbessern.py  r02_stats.py  r09_raus.py  r99_stats.py
tests/: conftest.py  test_all_pages.py  test_fastapi_auth.py  test_fastapi_stats.py  test_fastapi_text.py  test_helper_db.py  test_llm_mock.py  test_mock_mode.py  test_streamlit_all_pages.py
vue_app/: AGENTS.md
vue_app/__tests__/: setup.ts
vue_app/src/: App.vue  main.ts
vue_app/src/api/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
vue_app/src/api/client/: client.gen.ts  index.ts  types.gen.ts  utils.gen.ts
vue_app/src/api/core/: OpenAPI.ts  bodySerializer.gen.ts  pathSerializer.gen.ts  serverSentEvents.gen.ts  types.gen.ts  utils.gen.ts
vue_app/src/api/models/: ConfigResponse.ts  DailyUsage.ts  ImproveRequest.ts  ImproveResponse.ts  LoginRequest.ts  ModesResponse.ts  TextMode.ts  TextRequest.ts  (+5 more)
vue_app/src/assets/: ios-fixes.css
vue_app/src/composables/: useClipboard.ts  useConfig.ts  useKeyboardShortcuts.ts  useMarkdown.ts  useTextProcessing.ts
vue_app/src/config/: env.ts  modes.ts
vue_app/src/plugins/: quasar.ts  vuetify.ts
vue_app/src/router/: index.ts
vue_app/src/services/: apiClient.ts
vue_app/src/stores/: auth.spec.ts  auth.ts  text.spec.ts  text.ts
vue_app/src/utils/: clipboard.ts  diff.ts  jwt.ts
vue_app/src/views/: LoginView.vue  StatsView.vue  TextView.vue
(+10 files in other folders)
