[project]
name = "korrekturleser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.25.2",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "google-genai>=1.66.0",
    "mistralai>=2.3.0",
    "mysql-connector-python==9.4.0",
    "nicegui>=3.8.0",
    "openai>=2.26.0",
    "pandas==2.2.3",
    "pyarrow==20.0.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "slowapi>=0.1.9",
    "st-copy>=1.1.2",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "ollama>=0.6.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "tomli-w>=1.2.0",
    "uvicorn>=0.41.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["shared", "streamlit_app", "fastapi_app"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["shared", "streamlit_app", "fastapi_app"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]
